NetBSD Problem Report #31562

From martin@aprisoft.de  Wed Oct 12 06:35:19 2005
Return-Path: <martin@aprisoft.de>
Received: from mail.duskware.de (mail.duskware.de [213.146.108.170])
	by narn.netbsd.org (Postfix) with ESMTP id 598FA63B8CD
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 12 Oct 2005 06:35:19 +0000 (UTC)
Message-Id: <200510120635.j9C6Z67s025626@nelly.aprisoft.de>
Date: Wed, 12 Oct 2005 08:35:06 +0200 (CEST)
From: Martin Husemann <martin@aprisoft.de>
Reply-To: martin@aprisoft.de
To: gnats-bugs@netbsd.org
Subject: noisy nfs_timer output
X-Send-Pr-Version: 3.95

>Number:         31562
>Category:       kern
>Synopsis:       noisy nfs_timer output
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    mrg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 12 06:36:00 +0000 2005
>Closed-Date:    Sun Nov 23 08:23:15 +0000 2008
>Last-Modified:  Tue Mar 29 19:35:01 +0000 2011
>Originator:     Martin Husemann
>Release:        NetBSD 3.99.9
>Organization:
>Environment:
System: NetBSD nelly.aprisoft.de 3.99.9 NetBSD 3.99.9 (NELLY) #0: Tue Oct 4 10:22:51 CEST 2005 martin@nelly.aprisoft.de:/usr/src/sys/arch/sparc64/compile/NELLY sparc64
Architecture: sparc64
Machine: sparc64
>Description:

My switch borked over night and had to be reset this morning. This machine
has a NFS share mounted, and filled the console (and syslog) with

   nfs_timer: ignoring error 64

messages. Should we

 - rate limit this message?
 - remove it completely?
 - print it only once until the server is alive again?

>How-To-Repeat:

Block traffic to NFS server.

>Fix:
n/a

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: pooka@narn.netbsd.org
State-Changed-When: Sun, 20 Jan 2008 16:54:07 +0200
State-Changed-Why:
my suggestion: do not run DEBUG kernels if not interested in debug output


Responsible-Changed-From-To: kern-bug-people->mrg
Responsible-Changed-By: mrg@narn.netbsd.org
Responsible-Changed-When: Sun, 20 Jan 2008 21:29:36 +0000
Responsible-Changed-Why:
i'll look at this, it's pretty annoying when it happens.


State-Changed-From-To: feedback->open
State-Changed-By: mrg@narn.netbsd.org
State-Changed-When: Sun, 20 Jan 2008 21:29:36 +0000
State-Changed-Why:
this is a real problem - it mostly wedges machines with slow serial consoles.


State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sun, 23 Nov 2008 08:23:15 +0000
State-Changed-Why:
ding ding the bug is dead.


From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/31562 CVS commit: src/sys/nfs
Date: Sun, 23 Nov 2008 08:22:07 +0000 (UTC)

 Module Name:	src
 Committed By:	mrg
 Date:		Sun Nov 23 08:22:07 UTC 2008

 Modified Files:
 	src/sys/nfs: nfs_socket.c

 Log Message:
 avoid noisy nfs_timer/nfs_reply DEBUG output that occurs when the
 NFS server goes away.  use ratelimit(9) and only print the console
 error once every 10 seconds.  PR#31562.


 To generate a diff of this commit:
 cvs rdiff -r1.174 -r1.175 src/sys/nfs/nfs_socket.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/31562 CVS commit: [netbsd-5] src/sys/nfs
Date: Tue, 29 Mar 2011 19:34:46 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Tue Mar 29 19:34:46 UTC 2011

 Modified Files:
 	src/sys/nfs [netbsd-5]: nfs_socket.c

 Log Message:
 Pull up following revision(s) (requested by tls in ticket #1580):
 	sys/nfs/nfs_socket.c: revision 1.175
 avoid noisy nfs_timer/nfs_reply DEBUG output that occurs when the
 NFS server goes away.  use ratelimit(9) and only print the console
 error once every 10 seconds.  PR#31562.


 To generate a diff of this commit:
 cvs rdiff -u -r1.173.4.4 -r1.173.4.5 src/sys/nfs/nfs_socket.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.